# ROUSSATL

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/osal/: Cargo.toml
crates/osal-api/: Cargo.toml
crates/osal-api/src/: error.rs  lib.rs  prelude.rs  time.rs  traits.rs  types.rs
crates/osal-api/src/traits/: clock.rs  mutex.rs  queue.rs  semaphore.rs  system.rs  task.rs  timer.rs
crates/osal-backend-freertos/: Cargo.toml
crates/osal-backend-freertos-sys/: build.rs
crates/osal-backend-freertos-sys/csrc/: osal_freertos_shim.c
crates/osal-backend-freertos-sys/include/: osal_freertos_shim.h
crates/osal-backend-freertos-sys/src/: lib.rs  sync_fixture.rs
crates/osal-backend-freertos/src/: clock.rs  lib.rs  mutex.rs  runtime.rs  semaphore.rs  system.rs  wait.rs
crates/osal-backend-freertos/tests/: clock_stabilization.rs  mutex_contract.rs  mutex_stabilization.rs  runtime_lifecycle.rs  semaphore_contract.rs  sync_concurrent.rs  sync_stabilization.rs
crates/osal-backend-mock/: Cargo.toml
crates/osal-backend-mock/src/: clock.rs  fault.rs  lib.rs  mutex.rs  queue.rs  runtime.rs  semaphore.rs  system.rs  task.rs  time_runtime.rs  timer.rs  wait.rs
crates/osal-backend-mock/tests/: mutex_contract.rs  queue_contract.rs  semaphore_contract.rs  system_contract.rs  task_contract.rs  task_stabilization.rs  timer_contract.rs  timer_stabilization.rs
crates/osal-backend-posix/: Cargo.toml
crates/osal-backend-posix/examples/: blocking_semaphore.rs
crates/osal-backend-posix/src/: clock.rs  lib.rs  mutex.rs  queue.rs  runtime.rs  semaphore.rs  system.rs  task.rs  timer.rs  timer_control.rs  timer_service.rs
crates/osal-backend-posix/src/sys/: condvar.rs  errno.rs  mod.rs  mutex.rs  recursive_mutex.rs  task.rs  time.rs
crates/osal-backend-posix/tests/: clock_posix.rs  mutex_posix.rs  queue_posix.rs  semaphore_contract.rs  semaphore_posix.rs  system_contract.rs  task_contract.rs  task_posix.rs  timer_contract.rs  timer_lifecycle.rs
crates/osal-bsp/: Cargo.toml
crates/osal-bsp-linux/: Cargo.toml
crates/osal-bsp-linux/src/: lib.rs
crates/osal-bsp/src/: lib.rs
crates/osal-portable/: Cargo.toml
crates/osal-portable/src/: byte_queue.rs  counting_semaphore.rs  lib.rs  tick_time.rs  time_convert.rs
crates/osal-shared/: Cargo.toml
crates/osal-shared/src/: lib.rs  validation.rs
crates/osal-testkit/: Cargo.toml
crates/osal-testkit/src/: assertions.rs  factory.rs  lib.rs
crates/osal-testkit/src/contract/: clock.rs  fault.rs  lifetime.rs  mod.rs  mutex.rs  queue.rs  semaphore.rs  system.rs  task.rs  timer.rs
crates/osal-testkit/src/contract/queue/: close.rs  creation.rs  error_precedence.rs  fifo.rs  mod.rs  timeout.rs
crates/osal-testkit/src/factory/: clock.rs  fault.rs  mod.rs  mutex.rs  queue.rs  runtime.rs  semaphore.rs  system.rs  task.rs  timer.rs
crates/osal-testkit/src/fixture/: clock.rs  mod.rs
crates/osal/examples/: mock_mutex.rs  mock_queue.rs  mock_semaphore.rs  mock_timer.rs  mutex.rs  posix_mutex.rs  posix_semaphore.rs  posix_timer.rs  queue.rs  semaphore.rs  system.rs  task.rs  timer.rs
crates/osal/src/: backend.rs  lib.rs
docs/: architecture-zh.md  architecture.md  backend-contract-zh.md  backend-contract.md  behavior-contract.md  documentation-policy.md  mutex-foundation-slice.md  object-lifetime-zh.md  object-lifetime.md  queue-foundation-slice.md  semaphore-foundation-slice.md  system-foundation-slice.md  task-foundation-slice.md
docs/adr/: 0006-object-handle-model.md  0007-mutex-access-model.md  0008-isr-extension-model.md  0011-system-critical-section-model.md  0012-ci-validation-gates.md  0013-task-context-and-live-count.md  0014-backend-bsp-boundary.md  0015-runtime-lifecycle.md  0018-posix-timer-service-lifecycle.md  0019-backend-runtime-ownership.md  0020-freertos-integration-boundary.md  0021-freertos-configuration-contract.md  0023-freertos-tick-time-model.md  0024-freertos-system-mapping.md
tests/freertos-native-fixture/config/: FreeRTOSConfig.h
tests/freertos-native-fixture/kernel/include/: portable.h  task.h
tests/freertos-native-fixture/port/: portmacro.h
