[package]
name = "osal-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Public API traits and types for the OSAL framework"

[lib]
crate-type = ["rlib"]

[features]
default = []
std = []
alloc = []

[dependencies]
# No dependencies — osal-api is the foundation of the entire workspace
