[package]
name = "osal-backend-freertos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "FreeRTOS backend for the OSAL framework"

[lib]
crate-type = ["rlib"]

[features]
test-fixture = ["osal-backend-freertos-sys/test-fixture"]
testkit = ["dep:osal-testkit", "test-fixture"]

[dependencies]
osal-api = { path = "../osal-api" }
osal-shared = { path = "../osal-shared" }
osal-backend-freertos-sys = { path = "../osal-backend-freertos-sys" }
osal-testkit = { path = "../osal-testkit", optional = true }
spin = "0.9"
