[package]
name = "osal-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "OS-independent shared implementation for the OSAL framework"

[lib]
crate-type = ["rlib"]

[features]
default = []
std = ["osal-api/std"]
alloc = ["osal-api/alloc"]

[dependencies]
osal-api = { path = "../osal-api" }
