[package]
name = "osal-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Testing utilities for the OSAL framework"

[lib]
crate-type = ["rlib"]

[features]
default = []
std = []

[dependencies]
osal-api = { path = "../osal-api" }
