[package]
name = "osal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Operating System Abstraction Layer — facade crate"

[lib]
crate-type = ["rlib"]

[features]
default = ["backend-posix"]
backend-posix = ["dep:osal-backend-posix"]
backend-mock = ["dep:osal-backend-mock"]
backend-freertos = ["dep:osal-backend-freertos"]
freertos-test-fixture = [
    "backend-freertos",
    "osal-backend-freertos/test-fixture",
]

std = ["osal-api/std"]

[dependencies]
osal-api = { path = "../osal-api" }
osal-shared = { path = "../osal-shared" }
osal-backend-posix = { path = "../osal-backend-posix", optional = true }
osal-backend-mock = { path = "../osal-backend-mock", optional = true }
osal-backend-freertos = { path = "../osal-backend-freertos", optional = true }
